--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h2>CSS syntax</h2>
         <!-- Do tohoto odstavce bude vložen obrázek selector.gif -->
             <p>
-                <img src="/img/selector.gif" alt="Příklad css sytaxe">
+                <img src="img/selector.gif" alt="Příklad css sytaxe">
             </p>
         </div>
         <!-- Do zápatí zapiš text podle předlohy -->
